2008-03-10  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* gtk-gui/MonoDevelop.Projects.Gui.Dialogs.OptionPanels.GeneralProjectOptionsWidget.cs:
	  Workaround for bug in Mono 1.2.4 where usings are ignored in anonymous
	  methods.

2008-03-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Gui/ProjectsGuiServices.cs,
	  gtk-gui/MonoDevelop.Projects.Gui.Dialogs.OptionPanels.CombineStartupPanelWidget.cs,
	  gtk-gui/gui.stetic,
	  MonoDevelop.Projects.Gui.Dialogs.OptionPanels/CompileFileProjectOptions.cs,
	  MonoDevelop.Projects.Gui.Dialogs.OptionPanels/OutputOptionsPanel.cs,
	  MonoDevelop.Projects.Gui.Dialogs.OptionPanels/CombineStartupPanel.cs,
	  MonoDevelop.Projects.Gui.Dialogs.OptionPanels/CombineEntryConfigurationsPanel.cs,
	  MonoDevelop.Projects.Gui.Dialogs.OptionPanels/CommonAssemblySigningPreferences.cs:
	  Worked on gnome hig compliant alerts.

2008-02-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.mdp, Makefile.am: Removed gnome reference, added
	  glib.

2008-01-28  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Gui.Completion/TextUtilities.cs: Added
	  SearchBracketForward method.

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.addin.xml: Update MD version.

2008-01-24  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs: Don't reset
	  the code completion list to top when data gathering is completed. Fixes
	  bug #350890.

2008-01-10  Zach Lute <zach.lute@gmail.com>

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs: Scrollbar adjustment is
	  updated even if scrollbar is invisible. (Bug #350973)

2007-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs: Don't process
	  keys if the completion window is hidden. Fixes bug #348696.

2007-12-14  Lluis Sanchez Gual <lluis@novell.com> 
