@@ -33,6 +33,8 @@ namespace MonoDevelop.Projects.Gui.Dialogs.OptionPanels {
         
         private Gtk.Label nameLabel;
         
+        private Gtk.CheckButton parentDirectoryNamespaceCheckButton;
+        
         private Gtk.Entry projectDefaultNamespaceEntry;
         
         private Gtk.Entry projectNameEntry;
@@ -100,7 +102,7 @@ namespace MonoDevelop.Projects.Gui.Dialogs.OptionPanels {
             this.vbox46.Name = "vbox46";
             this.vbox46.Spacing = 6;
             // Container child vbox46.Gtk.Box+BoxChild
-            this.table11 = new Gtk.Table(((uint)(3)), ((uint)(2)), false);
+            this.table11 = new Gtk.Table(((uint)(4)), ((uint)(2)), false);
             this.table11.Name = "table11";
             this.table11.RowSpacing = ((uint)(6));
             this.table11.ColumnSpacing = ((uint)(6));
@@ -135,27 +137,42 @@ namespace MonoDevelop.Projects.Gui.Dialogs.OptionPanels {
             w5.XOptions = ((Gtk.AttachOptions)(4));
             w5.YOptions = ((Gtk.AttachOptions)(0));
             // Container child table11.Gtk.Table+TableChild
+            this.parentDirectoryNamespaceCheckButton = new Gtk.CheckButton();
+            this.parentDirectoryNamespaceCheckButton.CanFocus = true;
+            this.parentDirectoryNamespaceCheckButton.Name = "parentDirectoryNamespaceCheckButton";
+            this.parentDirectoryNamespaceCheckButton.Label = MonoDevelop.Core.GettextCatalog.GetString("Use parent directory name as namespace");
+            this.parentDirectoryNamespaceCheckButton.DrawIndicator = true;
+            this.parentDirectoryNamespaceCheckButton.UseUnderline = true;
+            this.table11.Add(this.parentDirectoryNamespaceCheckButton);
+            Gtk.Table.TableChild w6 = ((Gtk.Table.TableChild)(this.table11[this.parentDirectoryNamespaceCheckButton]));
+            w6.TopAttach = ((uint)(3));
+            w6.BottomAttach = ((uint)(4));
+            w6.LeftAttach = ((uint)(1));
+            w6.RightAttach = ((uint)(2));
+            w6.XOptions = ((Gtk.AttachOptions)(4));
+            w6.YOptions = ((Gtk.AttachOptions)(4));
+            // Container child table11.Gtk.Table+TableChild
             this.projectDefaultNamespaceEntry = new Gtk.Entry();
             this.projectDefaultNamespaceEntry.Name = "projectDefaultNamespaceEntry";
             this.projectDefaultNamespaceEntry.IsEditable = true;
             this.projectDefaultNamespaceEntry.InvisibleChar = '●';
             this.table11.Add(this.projectDefaultNamespaceEntry);
-            Gtk.Table.TableChild w6 = ((Gtk.Table.TableChild)(this.table11[this.projectDefaultNamespaceEntry]));
-            w6.TopAttach = ((uint)(2));
-            w6.BottomAttach = ((uint)(3));
-            w6.LeftAttach = ((uint)(1));
-            w6.RightAttach = ((uint)(2));
-            w6.YOptions = ((Gtk.AttachOptions)(0));
+            Gtk.Table.TableChild w7 = ((Gtk.Table.TableChild)(this.table11[this.projectDefaultNamespaceEntry]));
+            w7.TopAttach = ((uint)(2));
+            w7.BottomAttach = ((uint)(3));
+            w7.LeftAttach = ((uint)(1));
+            w7.RightAttach = ((uint)(2));
+            w7.YOptions = ((Gtk.AttachOptions)(0));
             // Container child table11.Gtk.Table+TableChild
             this.projectNameEntry = new Gtk.Entry();
             this.projectNameEntry.Name = "projectNameEntry";
             this.projectNameEntry.IsEditable = true;
             this.projectNameEntry.InvisibleChar = '●';
             this.table11.Add(this.projectNameEntry);
-            Gtk.Table.TableChild w7 = ((Gtk.Table.TableChild)(this.table11[this.projectNameEntry]));
-            w7.LeftAttach = ((uint)(1));
-            w7.RightAttach = ((uint)(2));
-            w7.YOptions = ((Gtk.AttachOptions)(0));
+            Gtk.Table.TableChild w8 = ((Gtk.Table.TableChild)(this.table11[this.projectNameEntry]));
+            w8.LeftAttach = ((uint)(1));
+            w8.RightAttach = ((uint)(2));
+            w8.YOptions = ((Gtk.AttachOptions)(0));
             // Container child table11.Gtk.Table+TableChild
             this.scrolledwindow5 = new Gtk.ScrolledWindow();
             this.scrolledwindow5.WidthRequest = 350;
@@ -168,27 +185,27 @@ namespace MonoDevelop.Projects.Gui.Dialogs.OptionPanels {
             this.projectDescriptionTextView.Name = "projectDescriptionTextView";
             this.scrolledwindow5.Add(this.projectDescriptionTextView);
             this.table11.Add(this.scrolledwindow5);
-            Gtk.Table.TableChild w9 = ((Gtk.Table.TableChild)(this.table11[this.scrolledwindow5]));
-            w9.TopAttach = ((uint)(1));
-            w9.BottomAttach = ((uint)(2));
-            w9.LeftAttach = ((uint)(1));
-            w9.RightAttach = ((uint)(2));
+            Gtk.Table.TableChild w10 = ((Gtk.Table.TableChild)(this.table11[this.scrolledwindow5]));
+            w10.TopAttach = ((uint)(1));
+            w10.BottomAttach = ((uint)(2));
+            w10.LeftAttach = ((uint)(1));
+            w10.RightAttach = ((uint)(2));
             this.vbox46.Add(this.table11);
-            Gtk.Box.BoxChild w10 = ((Gtk.Box.BoxChild)(this.vbox46[this.table11]));
-            w10.Position = 0;
+            Gtk.Box.BoxChild w11 = ((Gtk.Box.BoxChild)(this.vbox46[this.table11]));
+            w11.Position = 0;
             this.hbox29.Add(this.vbox46);
-            Gtk.Box.BoxChild w11 = ((Gtk.Box.BoxChild)(this.hbox29[this.vbox46]));
-            w11.Position = 1;
-            this.vbox47.Add(this.hbox29);
-            Gtk.Box.BoxChild w12 = ((Gtk.Box.BoxChild)(this.vbox47[this.hbox29]));
+            Gtk.Box.BoxChild w12 = ((Gtk.Box.BoxChild)(this.hbox29[this.vbox46]));
             w12.Position = 1;
-            w12.Expand = false;
-            w12.Fill = false;
-            this.vbox40.Add(this.vbox47);
-            Gtk.Box.BoxChild w13 = ((Gtk.Box.BoxChild)(this.vbox40[this.vbox47]));
-            w13.Position = 0;
+            this.vbox47.Add(this.hbox29);
+            Gtk.Box.BoxChild w13 = ((Gtk.Box.BoxChild)(this.vbox47[this.hbox29]));
+            w13.Position = 1;
             w13.Expand = false;
             w13.Fill = false;
+            this.vbox40.Add(this.vbox47);
+            Gtk.Box.BoxChild w14 = ((Gtk.Box.BoxChild)(this.vbox40[this.vbox47]));
+            w14.Position = 0;
+            w14.Expand = false;
+            w14.Fill = false;
             // Container child vbox40.Gtk.Box+BoxChild
             this.vbox41 = new Gtk.VBox();
             this.vbox41.Name = "vbox41";
@@ -201,10 +218,10 @@ namespace MonoDevelop.Projects.Gui.Dialogs.OptionPanels {
             this.onProjectLoadHeaderLabel.UseMarkup = true;
             this.onProjectLoadHeaderLabel.UseUnderline = true;
             this.vbox41.Add(this.onProjectLoadHeaderLabel);
-            Gtk.Box.BoxChild w14 = ((Gtk.Box.BoxChild)(this.vbox41[this.onProjectLoadHeaderLabel]));
-            w14.Position = 0;
-            w14.Expand = false;
-            w14.Fill = false;
+            Gtk.Box.BoxChild w15 = ((Gtk.Box.BoxChild)(this.vbox41[this.onProjectLoadHeaderLabel]));
+            w15.Position = 0;
+            w15.Expand = false;
+            w15.Fill = false;
             // Container child vbox41.Gtk.Box+BoxChild
             this.hbox26 = new Gtk.HBox();
             this.hbox26.Name = "hbox26";
@@ -214,10 +231,10 @@ namespace MonoDevelop.Projects.Gui.Dialogs.OptionPanels {
             this.label49.Name = "label49";
             this.label49.LabelProp = "";
             this.hbox26.Add(this.label49);
-            Gtk.Box.BoxChild w15 = ((Gtk.Box.BoxChild)(this.hbox26[this.label49]));
-            w15.Position = 0;
-            w15.Expand = false;
-            w15.Fill = false;
+            Gtk.Box.BoxChild w16 = ((Gtk.Box.BoxChild)(this.hbox26[this.label49]));
+            w16.Position = 0;
+            w16.Expand = false;
+            w16.Fill = false;
             // Container child hbox26.Gtk.Box+BoxChild
             this.newFilesOnLoadCheckButton = new Gtk.CheckButton();
             this.newFilesOnLoadCheckButton.Name = "newFilesOnLoadCheckButton";
@@ -225,15 +242,15 @@ namespace MonoDevelop.Projects.Gui.Dialogs.OptionPanels {
             this.newFilesOnLoadCheckButton.DrawIndicator = true;
             this.newFilesOnLoadCheckButton.UseUnderline = true;
             this.hbox26.Add(this.newFilesOnLoadCheckButton);
-            Gtk.Box.BoxChild w16 = ((Gtk.Box.BoxChild)(this.hbox26[this.newFilesOnLoadCheckButton]));
-            w16.Position = 1;
-            w16.Expand = false;
-            w16.Fill = false;
-            this.vbox41.Add(this.hbox26);
-            Gtk.Box.BoxChild w17 = ((Gtk.Box.BoxChild)(this.vbox41[this.hbox26]));
+            Gtk.Box.BoxChild w17 = ((Gtk.Box.BoxChild)(this.hbox26[this.newFilesOnLoadCheckButton]));
             w17.Position = 1;
             w17.Expand = false;
             w17.Fill = false;
+            this.vbox41.Add(this.hbox26);
+            Gtk.Box.BoxChild w18 = ((Gtk.Box.BoxChild)(this.vbox41[this.hbox26]));
+            w18.Position = 1;
+            w18.Expand = false;
+            w18.Fill = false;
             // Container child vbox41.Gtk.Box+BoxChild
             this.hbox27 = new Gtk.HBox();
             this.hbox27.Name = "hbox27";
@@ -243,10 +260,10 @@ namespace MonoDevelop.Projects.Gui.Dialogs.OptionPanels {
             this.label50.Name = "label50";
             this.label50.LabelProp = "";
             this.hbox27.Add(this.label50);
-            Gtk.Box.BoxChild w18 = ((Gtk.Box.BoxChild)(this.hbox27[this.label50]));
-            w18.Position = 0;
-            w18.Expand = false;
-            w18.Fill = false;
+            Gtk.Box.BoxChild w19 = ((Gtk.Box.BoxChild)(this.hbox27[this.label50]));
+            w19.Position = 0;
+            w19.Expand = false;
+            w19.Fill = false;
             // Container child hbox27.Gtk.Box+BoxChild
             this.autoInsertNewFilesCheckButton = new Gtk.CheckButton();
             this.autoInsertNewFilesCheckButton.Name = "autoInsertNewFilesCheckButton";
@@ -254,20 +271,20 @@ namespace MonoDevelop.Projects.Gui.Dialogs.OptionPanels {
             this.autoInsertNewFilesCheckButton.DrawIndicator = true;
             this.autoInsertNewFilesCheckButton.UseUnderline = true;
             this.hbox27.Add(this.autoInsertNewFilesCheckButton);
-            Gtk.Box.BoxChild w19 = ((Gtk.Box.BoxChild)(this.hbox27[this.autoInsertNewFilesCheckButton]));
-            w19.Position = 1;
-            w19.Expand = false;
-            w19.Fill = false;
-            this.vbox41.Add(this.hbox27);
-            Gtk.Box.BoxChild w20 = ((Gtk.Box.BoxChild)(this.vbox41[this.hbox27]));
-            w20.Position = 2;
+            Gtk.Box.BoxChild w20 = ((Gtk.Box.BoxChild)(this.hbox27[this.autoInsertNewFilesCheckButton]));
+            w20.Position = 1;
             w20.Expand = false;
             w20.Fill = false;
-            this.vbox40.Add(this.vbox41);
-            Gtk.Box.BoxChild w21 = ((Gtk.Box.BoxChild)(this.vbox40[this.vbox41]));
-            w21.Position = 1;
+            this.vbox41.Add(this.hbox27);
+            Gtk.Box.BoxChild w21 = ((Gtk.Box.BoxChild)(this.vbox41[this.hbox27]));
+            w21.Position = 2;
             w21.Expand = false;
             w21.Fill = false;
+            this.vbox40.Add(this.vbox41);
+            Gtk.Box.BoxChild w22 = ((Gtk.Box.BoxChild)(this.vbox40[this.vbox41]));
+            w22.Position = 1;
+            w22.Expand = false;
+            w22.Fill = false;
             this.Add(this.vbox40);
             if ((this.Child != null)) {
                 this.Child.ShowAll();
